聊天demo的文件上传

--- a/experiment/chat/src/main/resources/static/index.html
+++ b/experiment/chat/src/main/resources/static/index.html
@@ -38,6 +38,8 @@
     $("#touZi").click(() => {
         randomName();
     })
+
+    $("#fileDiv").click(() => location.href = "fileTes.html")
 </script>
 </body>
 </html>
