记账程序加入收支类型表

--- a/experiment/payment/src/main/resources/static/index.html
+++ b/experiment/payment/src/main/resources/static/index.html
@@ -13,7 +13,8 @@
         <button class="btn-line-suc" type="submit" onclick="getAll()">Search</button>
     </form>
     <div>
-        <button type="button" class="my-btn btn-success" onclick="showDialog()">添加</button>
+        <button type="button" class="my-btn btn-success" onclick="showDialog()">添加记录</button>
+        <button type="button" class="my-btn" onclick="showDialog()">收支类型</button>
     </div>
 </section>
 <!-- 表格 -->
