收支记录样式调整

--- a/experiment/payment/src/main/resources/static/index.html
+++ b/experiment/payment/src/main/resources/static/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>记账管理</title>
-    <link href="assert/myCurl.min.css" rel="stylesheet">
+    <link href="assert/payCurl.min.css" rel="stylesheet">
 </head>
 <body>
 <!--搜索框-->
@@ -95,8 +95,8 @@
         <td>备注</td>
         <td>付费时间</td>
         <td>
-            <button class="del-btn" type="button">❌</button>
-            <button class="upd-btn" type="button">🖊</button>
+            <button class="del-btn" type="button"><img src="svg/trash.svg" alt="del"></button>
+            <button class="upd-btn" type="button"><img src="svg/pencil-square.svg" alt="edit"></button>
         </td>
     </tr>
 </template>
