账本的分页查询优化(抽离js)

--- a/experiment/payment/src/main/resources/static/index.html
+++ b/experiment/payment/src/main/resources/static/index.html
@@ -100,4 +100,5 @@
 </body>
 <script src="assert/myTus.js"></script>
 <script src="assert/payCurl.js"></script>
+<script src="assert/pageNav.js"></script>
 </html>
