收支记录加入月份卡片

--- a/experiment/payment/src/main/resources/static/index.html
+++ b/experiment/payment/src/main/resources/static/index.html
@@ -19,6 +19,8 @@
         <button type="button" class="my-btn btn-success" onclick="showDialog()">添加记录</button>
         <button type="button" class="my-btn btn-secondary" onclick="window.location.href = '/payType.html'">收支类型
         </button>
+        <button type="button" class="my-btn" onclick="window.location.href = '/twelveCard.html'">年度总结
+        </button>
     </div>
 </section>
 <!-- 表格 -->
