分类加入染色

--- a/experiment/payment/src/main/resources/static/payType.html
+++ b/experiment/payment/src/main/resources/static/payType.html
@@ -25,7 +25,7 @@
         <th>收支</th>
         <th>大类</th>
         <th>名称</th>
-        <th>备注</th>
+        <th>颜色</th>
         <th>数量</th>
         <th>操作</th>
     </tr>
@@ -59,8 +59,8 @@
                 <input id="keyName" type="text" autocomplete="off">
             </div>
             <div class="form-row">
-                <label for="remark">备注</label>
-                <input id="remark" type="text" autocomplete="off">
+                <label for="color">颜色</label>
+                <input id="color" type="color">
             </div>
         </fieldset>
         <div class="form-footer">
