账本加入饼状图

--- a/experiment/payment/src/main/resources/static/calendar.html
+++ b/experiment/payment/src/main/resources/static/calendar.html
@@ -25,5 +25,6 @@
     </div>
 </div>
 </body>
+<script src="assert/getQueryParams.js"></script>
 <script src="assert/calendar.js"></script>
 </html>
