--- a/experiment/payment/src/main/resources/static/index.html
+++ b/experiment/payment/src/main/resources/static/index.html
@@ -104,6 +104,7 @@
 </nav>
 </body>
 <script src="assert/myTus.js"></script>
+<script src="assert/getQueryParams.js"></script>
 <script src="assert/payCurl.js"></script>
 <script src="assert/pageNav.js"></script>
 </html>
