--- a/experiment/payment/src/main/resources/static/monthChart.html
+++ b/experiment/payment/src/main/resources/static/monthChart.html
@@ -23,10 +23,16 @@
             left: 50%;
             margin-left: -250px;
         }
+
+        #outSpan {
+            color: #17bd17;
+            font-weight: bolder
+        }
     </style>
 </head>
 <body>
 <h1 id="dateH1">2024-1</h1>
+<p>当月总支出：<span id="outSpan"></span></p>
 <h2>柱状图</h2>
 <!--需要在外面加上宽高限制-->
 <div id="barDiv">
