--- a/experiment/payment/src/main/resources/static/twelveCard.html
+++ b/experiment/payment/src/main/resources/static/twelveCard.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <h1>2024</h1>
+<button type="button" onclick="jumpToYearChart()">当年图表分析</button>
 <div id="twelveCard">
 </div>
 </body>
