--- a/experiment/payment/src/main/resources/static/monthChart.html
+++ b/experiment/payment/src/main/resources/static/monthChart.html
@@ -44,7 +44,7 @@
     <canvas id="pieChart"></canvas>
 </div>
 </body>
-<script src="assert/chart.min.js"></script>
+<script src="assert/chart.umd.js"></script>
 <script src="assert/getQueryParams.js"></script>
 <script src="assert/monthChart.js"></script>
 </html>
