--- a/experiment/payment/src/main/resources/static/yearChart.html
+++ b/experiment/payment/src/main/resources/static/yearChart.html
@@ -8,7 +8,7 @@
 <h1 id="yearH1">2024</h1>
 <canvas id="lineChart"></canvas>
 </body>
-<script src="assert/chart.min.js"></script>
+<script src="assert/chart.umd.js"></script>
 <script src="assert/getQueryParams.js"></script>
 <script src="assert/yearChart.js"></script>
 </html>
