--- a/experiment/payment/src/main/resources/static/payCurl.html
+++ b/experiment/payment/src/main/resources/static/payCurl.html
@@ -19,7 +19,7 @@
         <button type="button" class="my-btn btn-success" onclick="showDialog()">添加记录</button>
         <button type="button" class="my-btn btn-secondary" onclick="window.location.href = '/payType.html'">收支类型
         </button>
-        <button type="button" class="my-btn" onclick="window.location.href = '/twelveCard.html'">年度总结
+        <button type="button" class="my-btn" onclick="window.location.href = '/'">返回首页
         </button>
     </div>
 </section>
