记账代码结构调整

--- a/experiment/payment/src/main/resources/static/monthDay.html
+++ b/experiment/payment/src/main/resources/static/monthDay.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>日历</title>
-    <link href="assert/calendar.min.css" rel="stylesheet">
+    <link href="assert/monthDay.min.css" rel="stylesheet">
 </head>
 <body>
 <div id="calendar">
@@ -26,5 +26,5 @@
 </div>
 </body>
 <script src="assert/getQueryParams.js"></script>
-<script src="assert/calendar.js"></script>
+<script src="assert/monthDay.js"></script>
 </html>
