--- a/experiment/payment/src/main/resources/static/yearLine.html
+++ b/experiment/payment/src/main/resources/static/yearLine.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
-    <title>十二月收支图表</title>
+    <title>收支变化折线图</title>
 </head>
 <body>
 <h1 id="yearH1">2024</h1>
@@ -10,5 +10,5 @@
 </body>
 <script src="assert/chart.umd.js"></script>
 <script src="assert/getQueryParams.js"></script>
-<script src="assert/yearChart.js"></script>
+<script src="assert/yearLine.js"></script>
 </html>
