--- a/experiment/payment/src/main/resources/static/index.html
+++ b/experiment/payment/src/main/resources/static/index.html
@@ -3,15 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>十二月卡片</title>
-    <link href="assert/twelveCard.min.css" rel="stylesheet">
+    <link href="assert/yearMonth.min.css" rel="stylesheet">
 </head>
 <body>
-<h1 id="yearH1">2024年</h1>
-<button type="button" onclick="addYear(false)">-1年</button>
-<button type="button" onclick="jumpToYearChart()">当年图表分析</button>
-<button type="button" onclick="addYear(true)">+1年</button>
+<h1>
+    <button type="button" onclick="addYear(false)">-</button>
+    <span id="yearH1">2024年</span>
+    <button type="button" onclick="addYear(true)">+</button>
+</h1>
+<button type="button" onclick="jumpToYearLine()">收支变化折线图</button>
+<button type="button" onclick="jumpToYearPie()">消费成分饼状图</button>
+<hr>
 <div id="twelveCard">
 </div>
 </body>
-<script src="assert/twelveCard.js"></script>
+<script src="assert/yearMonth.js"></script>
 </html>
