记账年收支

--- a/experiment/payment/src/main/resources/static/yearLine.html
+++ b/experiment/payment/src/main/resources/static/yearLine.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>收支变化折线图</title>
 </head>
-<body>
+<body style="text-align: center">
 <h1 id="yearH1">2024</h1>
+<p id="yearMoney" style="font-weight:bolder"></p>
 <canvas id="lineChart"></canvas>
 </body>
 <script src="assert/chart.umd.js"></script>
