记账年度总结

--- a/experiment/payment/src/main/resources/static/index.html
+++ b/experiment/payment/src/main/resources/static/index.html
@@ -13,6 +13,7 @@
 </h1>
 <button type="button" onclick="jumpToYearLine()">收支变化折线图</button>
 <button type="button" onclick="jumpToYearPie()">消费成分饼状图</button>
+<button type="button" onclick="jumpToYearReport()">年度消费报告</button>
 <hr>
 <div id="twelveCard">
 </div>
