--- a/experiment/payment/src/main/resources/static/yearLine.html
+++ b/experiment/payment/src/main/resources/static/yearLine.html
@@ -7,6 +7,8 @@
 <body style="text-align: center">
 <h1 id="yearH1">2024</h1>
 <canvas id="lineChart"></canvas>
+<h2>每月各类消费</h2>
+<canvas id="lineChart2"></canvas>
 </body>
 <script src="assert/chart.umd.js"></script>
 <script src="assert/getQueryParams.js"></script>
