--- a/experiment/payment/src/main/resources/static/payCurl.html
+++ b/experiment/payment/src/main/resources/static/payCurl.html
@@ -10,9 +10,11 @@
 <!--搜索框-->
 <section class="mySearch">
     <form role="search" onsubmit="return false">
-        <select aria-label="Search" id="bigTypeSearch" onchange="getAll()"></select>
-        <label for="beginDate">起始日期</label><input type="date" id="beginDate" onchange="getAll()">
-        <label for="endDate">终止日期</label><input type="date" id="endDate" onchange="getAll()">
+        <label for="bigTypeSearch">类别</label>
+        <select aria-label="Search" id="bigTypeSearch" onchange="bigTypeChange()"></select>
+        <select aria-label="Search" id="paymentTypeSearch" onchange="getAll()"></select>
+        <label for="beginDate">起始日</label><input type="date" id="beginDate" onchange="getAll()">
+        <label for="endDate">终止日</label><input type="date" id="endDate" onchange="getAll()">
         <button class="btn-line-suc" type="submit" onclick="getAll()">Search</button>
     </form>
     <div>
