--- a/bootLearn/chat/src/main/resources/static/index.html
+++ b/bootLearn/chat/src/main/resources/static/index.html
@@ -13,6 +13,7 @@
     <div id="container">
         <div id="chatDiv">在线聊天页面</div>
         <div id="fileDiv">文件上传下载</div>
+        <div id="qrCode">二维码处理器</div>
     </div>
 </div>
 <script src="js/jquery-3.6.3.min.js"></script>
@@ -40,6 +41,8 @@
     })
 
     $("#fileDiv").click(() => location.href = "fileTes.html")
+
+    $("#qrCode").click(() => location.href = "qrCode.html")
 </script>
 </body>
 </html>
