聊天文件二维码

--- a/bootLearn/chat/src/main/resources/static/qrCode.html
+++ b/bootLearn/chat/src/main/resources/static/qrCode.html
@@ -30,7 +30,7 @@
     "use strict";
     const qrCodeText = $('#qrCodeText') // 二维码值的输入框
     const qrCodeImg = $('#qrCodeImg') // 二维码图片
-    const parseQRCodeText = $('#parseQRCodeText') // 二维码图片
+    const parseQRCodeText = $('#parseQRCodeText') // 二维码解析内容
     window.onload = () => {
         // 获取协议+主机名和端口
         const urlText = window.location.protocol + '//' + window.location.host;
