--- a/bootLearn/chat/src/main/resources/static/fileTes.html
+++ b/bootLearn/chat/src/main/resources/static/fileTes.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>文件上传下载</title>
     <link href="css/fileTes.min.css" rel="stylesheet">
 </head>
@@ -28,6 +29,14 @@
         <figcaption>下载链接二维码</figcaption>
     </figure>
 </dialog>
+<!--文件提示-->
+<footer>
+    <h3>文件提示</h3>
+    <ul>
+        <li>电脑端可展示文件的下载二维码</li>
+        <li>手机QQ接收文件：Android\data\com.tencent.mobileqq\Tencent\QQfile_recv</li>
+    </ul>
+</footer>
 </body>
 <script src="js/jquery-3.6.3.min.js"></script>
 <script>
