--- a/bootLearn/chat/src/main/resources/static/index.html
+++ b/bootLearn/chat/src/main/resources/static/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>聊天测试之登录</title>
     <link href="css/inputAndBtn.min.css" rel="stylesheet">
 </head>
