--- a/bootLearn/chat/src/main/resources/static/qrCode.html
+++ b/bootLearn/chat/src/main/resources/static/qrCode.html
@@ -2,12 +2,13 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>二维码处理器</title>
     <style>
         #parseQRCodeText {
             border: 3px solid #008a5b;
             padding: 8px;
-            width: 400px;
+            width: 375px;
         }
     </style>
 </head>
