--- a/bootLearn/bootDemo/src/main/resources/static/index.html
+++ b/bootLearn/bootDemo/src/main/resources/static/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SpringBoot样例</title>
-    <link href="发光登录页.min.css" rel="stylesheet">
+    <link href="css/lightLogin.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="ring">
@@ -14,14 +14,10 @@
     <div class="login">
         <h2>SpringBoot样例</h2>
         <div class="ipt-box">
-            <a href="page/students.html">
-                <button type="button">查询所有学生</button>
-            </a>
-            <a href="page/dogs.html">
-                <button type="button">
-                    MyBatis一对多循环查询
-                </button>
-            </a>
+            <div class="ipt-box">
+                <div class="ipt-btn"><a href="page/students.html">查询所有学生</a></div>
+                <div class="ipt-btn"><a href="page/dogs.html">MyBatis一对多循环查询</a></div>
+            </div>
         </div>
     </div>
 </div>
