--- a/codeLearning/src/main/resources/operateFile/index.html
+++ b/codeLearning/src/main/resources/operateFile/index.html
@@ -7,11 +7,13 @@
 <body>
 <h1>HELLO_WORLD</h1>
 <h2 id="tesParam"></h2>
+<p id="imgFileList"></p>
 <img src="testResize.jpg" alt="测试图片">
 </body>
 <script>
     "use strict";
     const tesParam = document.getElementById("tesParam");
+    const imgFileList = document.getElementById("imgFileList");
     window.onload = () => {
         const href = window.location.href
         if (href.indexOf("?") !== -1) {
@@ -21,6 +23,11 @@
         } else {
             tesParam.innerText = "没有传参"
         }
+
+        fetch("/operateFile/list").then(resp => resp.text())
+            .then(data => {
+                imgFileList.innerText = data;
+            })
     }
 </script>
 </html>
